# hazelbean_dev

./: .auto-changelog  .gitignore  CHANGELOG.md  README.md  SUGGESTIONS.md  environment.yml  markdown_cheatsheet.md  pypi upload method.txt  pyproject.toml  setup.py
.github/workflows/: build-python.yml  changelog.yml  deploy-docs.yml  testing-quality-gates.yml  tests.yml
architecture/: .gitignore  Makefile  README.md  generate_diagram.py  hazelbean_architecture.dot  requirements.txt
baselines/: current_performance_baseline.json
baselines/snapshots/: baseline_snapshot_20250903_194847_20a2ada7.json  baseline_snapshot_20250903_195135_20a2ada7.json  baseline_snapshot_20250903_214358_20a2ada7.json
data/: mask_20250407_143528_940avj.tif  resampled_20250408_093721_396pjf.tif
data/pyramids/: ha_per_cell_14400sec.tif  ha_per_cell_1800sec.tif  ha_per_cell_300sec.tif  ha_per_cell_36000sec.tif  ha_per_cell_3600sec.tif  ha_per_cell_7200sec.tif  ha_per_cell_900sec.tif  ha_per_cell_column_10sec.tif  ha_per_cell_column_14400sec.tif  ha_per_cell_column_1800sec.tif  ha_per_cell_column_300sec.tif  ha_per_cell_column_30sec.tif  ha_per_cell_column_36000sec.tif  ha_per_cell_column_3600sec.tif  ha_per_cell_column_7200sec.tif  ha_per_cell_column_900sec.tif  match_14400sec.tif  match_150sec.tif  match_1800sec.tif  match_300sec.tif  match_30sec.tif  match_36000sec.tif  match_3600sec.tif  match_7200sec.tif  match_900sec.tif
docs/: _quarto.yml  cython-development-workflow.md  get_path_error_handling.qmd  getting-started.md  github-actions-research-and-fix-documentation.md  hazelbean-testing-presentation.md  index.qmd  installation.qmd  performance-benchmarking-guide.md  quickstart.qmd  release-checklist-template.md  release-process-explained.md  release-quick-reference.md  render_docs_and_publish_to_website.py  site-generation-tools.md  windows-setup.md
docs-site/: MKDOCS-DEPRECATED.md  README.md  mkdocs.yml  setup-github-pages.sh
examples/: README.md  step_1_project_setup.py  step_2_data_loading.py  step_3_basic_processing.py  step_4_analysis.py  step_5_export_results.py
hazelbean/: __init__.py  arrayframe.py  arrayframe_functions.py  arrayframe_numpy_functions.py  cat_ears.py  cloud_utils.py  cog.py  config.py  conventions.py  core.py  data_structures.py  file_io.py  geoprocessing.py  geoprocessing_extension.py  globals.py  integration_testing_utils.py  json_helper.py  netcdf.py  os_utils.py  parallel.py  pog.py  project_flow.py  pyramids.py  raster_vector_interface.py  slow_config.py  spatial_projection.py  spatial_utils.py  stats.py  utils.py  vector.py  visualization.py
hazelbean_tests/: KNOWN_BUGS.md  README.md  conftest.py  key_t_align.py  key_t_os_funcs.py  key_t_project_flow.py  key_t_pyramids.py  key_t_zonal_stats.py  manual_test_zonal_stats.py  t_arrayframe_functions.py  test_align.py  test_arrayframe.py  test_cat_ears.py  test_example_change.py  test_os_funcs.py  test_pog.py  test_project_flow.py  test_pyramids.py  test_pyramids_original.py  test_raster_vector_interface.py  test_spatial_projection.py  test_spatial_utils.py  test_utils.py
scripts/: cmip6_example.py  convert_python_file_to_jupyter.py  create_benchmark_dashboard.py  demo_cli_workflow.sh  diagnose_pytest_benchmark.py  establish_performance_baseline.py  generate_changelog.sh  hb_compile_cython_files.py  make_file_pog.py  manual_test_open_speed_of_float32v64.py  release_hazelbean_to_pypi.py  run_performance_benchmarks.py  verify_installation.py  visualize_benchmarks.py
tests/: important_functions_to_document_and_test.md  key_t_imports.py  key_t_misc.py  key_t_parallel.py  key_t_pyramids.py  key_t_raster_vector_interface.py  key_t_spatial_utils.py  key_t_stats.py  key_t_utils.py  key_t_zonal_stats.py  manual_t_hdf5_netcdf4.py  t_pyramids.py  t_raster_vector_interface.py  t_spatial_projection.py  test_align_and_resize_raster_stack.py  test_cat_ears.py  test_cog.py  test_os_funcs.py  test_pog.py  test_pyramids.py  test_spatial_utils.py  test_utils.py
tools/: README_Windows.md  generate_all_reports.py  generate_baseline_report.py  generate_benchmark_summary.py  generate_clean_test_docs.py  generate_complete_site.cmd  generate_complete_site.ps1  generate_complete_site.sh  generate_coverage_report.py  generate_reports.sh  generate_test_results_report.py  quarto_serve.cmd  quarto_serve.sh  test_failure_tracking.py  update_reports_index.py
(+208 files in other folders)
