[project]
name = "hazelbean"
description = "Collection of geospatial algorithms, parallel computation utilities and project management tools."
readme = "README.md"
requires-python = ">=3.6"  # TODO: verify; assuming 3.6 b/c fstrings
license = { file = "LICENSE" }
authors = [
        {name = "Justin Andrew Johnson"}
]
maintainers = [
        {name = "Justin Andrew Johnson"}
]
keywords = ["gis", "geospatial", "economics", "land use"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Programming Language :: Cython",
        "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://github.com/jandrewjohnson/hazelbean_dev"

[build-system]
requires = [
        "setuptools>=61", "wheel", "cython>3",
        'oldest-supported-numpy; python_version<="3.8"',
        'numpy>=2; python_version>="3.9"',  # numpy 2 only available for 3.9+
        'setuptools_scm>=8',
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

